Decreasing image scale function completed

--- a/Lab01/Lab01/Lab01.vcxproj.filters
+++ b/Lab01/Lab01/Lab01.vcxproj.filters
@@ -29,7 +29,7 @@
     <ClCompile Include="ImageIncreaser.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Maincpp.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
