--- a/02Lab/02Lab/02Lab.vcxproj.filters
+++ b/02Lab/02Lab/02Lab.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClInclude Include="HistogramEqualisation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HistogramBuilder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="HistogramEqualisation.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HistogramBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
