--- a/08_Lab_Kucherenko/08_Lab_Kucherenko/08_Lab_Kucherenko.vcxproj.filters
+++ b/08_Lab_Kucherenko/08_Lab_Kucherenko/08_Lab_Kucherenko.vcxproj.filters
@@ -21,9 +21,21 @@
     <ClCompile Include="OptimalThreshold.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HistogramEqualisation.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="HistogramBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OptimalThreshold.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HistogramEqualisation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HistogramBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
